# open5gs

./: meson.build  meson_options.txt
configs/pcrf-no-mongodb/: pcrf-default.json  pcrf-internet.json  pcrf.yaml.in
lib/app/: ogs-context.c  ogs-context.h
lib/dbi/: dbi-private.h  dbi.c  meson.build  ogs-dbi.h  ogs-mongoc.h  session.h
lib/dbi/json/: json-private.h  json.c
lib/dbi/mongo/: dummy.c  ims.c  mongo-private.h  ogs-mongoc.c  ogs-mongoc.h  session.c  subscription.c
src/mme/: mme-gn-build.c  mme-gn-build.h  mme-gn-handler.c  mme-gtp-path.c  mme-gtp-path.h  s1ap-handler.c
src/pcf/: nbsf-handler.c  npcf-handler.c
src/pcrf/: pcrf-context.c  pcrf-context.h  pcrf-gx-path.c  pcrf-init.c
tests/common/: context.c  context.h
